--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
 [build-system]
 requires = ["setuptools>=64"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+long_description = "file: README.md"
+long_description_content_type = "text/markdown"  # or "text/x-rst" for reST
