--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,14 @@ dependencies = [
     "pandas",
     "numpy"
 ]
+long_description = "file: readme.md"
+
+[project.dynamic]
+readme = ["README.md"]
+requires-python = ">=3.6"
+license = "LGPL"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
+    "Operating System :: OS Independent"
+]
