--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyBacktest"
-version = "0.0.75"
+version = "0.0.8"
 description = "A backtesting framework for stock price prediction strategies"
 authors = [
     { name = "Ben Bell", email = "slow111poke@gmail.com" }
@@ -24,6 +24,4 @@ classifiers = [
 ]
 
 [project.dynamic]
-requires-python = true
-license = true
-classifiers = true
+fields = ["requires-python", "license", "classifiers"]
