--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "pandas",
     "numpy"
 ]
-long_description = "file: readme.md"
+long_description = "file: README.md"
 readme = "README.md"
 requires-python = ">=3.8"
 license = { text = "LGPL-3.0-only" }
@@ -24,4 +24,4 @@ classifiers = [
 ]
 
 [project.dynamic]
-fields = ["requires-python", "license", "classifiers"]
+["requires-python", "license", "classifiers"]
