--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,6 @@ dependencies = [
     "pandas",
     "numpy"
 ]
-long_description = "file: README.md"
-readme = "README.md"
 requires-python = ">=3.8"
 license = { text = "LGPL-3.0-only" }
 classifiers = [
@@ -23,5 +21,9 @@ classifiers = [
     "Operating System :: OS Independent"
 ]
 
-[project.dynamic]
-["requires-python", "license", "classifiers"]
+[project.urls]
+Home = "https://github.com/yourusername/pyBacktest"
+
+[tool.setuptools]
+long_description = { file = "readme.md" }
+long_description_content_type = "text/markdown"
