--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,7 @@ classifiers = [
     "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
     "Operating System :: OS Independent"
 ]
+readme = "readme.md"
 
 [project.urls]
 Home = "https://github.com/yourusername/pyBacktest"
-
-[tool.setuptools]
-long_description = { file = "readme.md" }
-long_description_content_type = "text/markdown"
