--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyBacktest"
-version = "1.1.3"
+version = "1.1.4"
 description = "A backtesting framework for stock price prediction strategies"
 authors = [
     { name = "Ben Bell", email = "slow111poke@gmail.com" }
@@ -12,7 +12,8 @@ authors = [
 dependencies = [
     "pandas",
     "numpy",
-    "yfinance"
+    "yfinance",
+    "typing-extensions"
 ]
 requires-python = ">=3.8"
 license = { text = "LGPL-3.0-only" }
